Items in the 'not_visible' class should no longer show on screen if they contain long, unwrapped text

--- a/public/stylesheets/layout/bioportal.css
+++ b/public/stylesheets/layout/bioportal.css
@@ -216,8 +216,6 @@ h1 a:hover, h2 a:hover {
   padding-top:4px;
 }
 .tab_container {
-  left: -9999px;
-  position: absolute;
 }
 #bd {
   background: #fff;
